# binance-trade-aggregator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  binance-service.logrotate  binance-service.service  conanfile.txt  config.json  main.cpp  output.txt
.github/workflows/: tests.yml
include/: aggregator.h  binance_client.h  config.h  file_writer.h  json_trade_parser.h  trade.h  trade_queue.h  window_stats.h
src/: aggregator.cpp  binance_client.cpp  config.cpp  file_writer.cpp  json_trade_parser.cpp  trade_queue.cpp  window_stats.cpp
tests/: test_aggregator.cpp  test_binance_client.cpp  test_config.cpp  test_file_writer.cpp  test_json_trade_parser.cpp  test_trade_queue.cpp  test_window_stats.cpp
